--- a/src/containers/admin/JobManagement/Statistics/MainJobList/MainJobList.scss
+++ b/src/containers/admin/JobManagement/Statistics/MainJobList/MainJobList.scss
@@ -1,114 +1,124 @@
 .mainjob-List__content {
-    .typeJobAdd{
-        padding: 8px 10px;
-        border-radius: 15px;
-        margin-bottom: 10px;
-        border: none;
-        background-color: #73BFDD;
-        color: #fff;
-        font-weight: 600;
-        transition: box-shadow 0.3s;
-        margin-bottom: 0;
-        &:hover{
-            box-shadow: 0px 5px 25px 0px rgb(0 0 0 / 20%);
-        }
+  .typeJobAdd {
+    padding: 8px 10px;
+    border-radius: 15px;
+    margin-bottom: 10px;
+    border: none;
+    background-color: #73bfdd;
+    color: #fff;
+    font-weight: 600;
+    transition: box-shadow 0.3s;
+    margin-bottom: 0;
+    &:hover {
+      box-shadow: 0px 5px 25px 0px rgb(0 0 0 / 20%);
     }
-    .typeJobCancle{
-        background-color: #FF7070;
-        margin-left: 5px;
-    }
-    .tyJobAddBtn, .typeJobCancle{
+  }
+  .typeJobCancle {
+    background-color: #ff7070;
+    margin-left: 5px;
+  }
+  .tyJobAddBtn,
+  .typeJobCancle {
+    transform-origin: center center;
+    // transform: scale(0);
+  }
+  .manjob-List__addNew {
+    position: relative;
+    margin-bottom: 20px;
+    .newJob__context {
+      position: absolute;
+      top: 3px;
+      left: 150px;
+      display: flex;
+      justify-content: flex-start;
+      input {
+        margin-right: 10px;
+        border-radius: 5px;
+        opacity: 0;
+        transform-origin: left center;
+        width: 200px;
+        padding: 5px 10px;
+        transition: opacity 0.4s;
+        transition-delay: 0.4s;
+      }
+      .newJob__action {
+        margin-left: 10px;
+      }
+      button.tyJobAddBtn,
+      button.typeJobCancle {
         transform-origin: center center;
-        // transform: scale(0);
+        transform: scale(0);
+        transition: transform 0.3s;
+      }
+      button.tyJobAddBtn {
+        transition-delay: 0.3s;
+      }
+      button.typeJobCancle {
+        transition-delay: 0.2s;
+      }
     }
-    .manjob-List__addNew{
-        position: relative;
-        margin-bottom: 20px;
-        .newJob__context{
-            position: absolute;
-            top: 3px;
-            left: 150px;
-            display: flex;
-            justify-content: flex-start;
-            input{
-                margin-right: 10px;
-                border-radius: 5px;
-                opacity: 0;
-                transform-origin: left center;
-                width: 200px;
-                padding: 5px 10px;
-                transition: opacity .4s;
-                transition-delay: 0.4s;
-            }
-            .newJob__action{
-                margin-left: 10px;
-            }
-            button.tyJobAddBtn, button.typeJobCancle{
-                transform-origin: center center;
-                transform: scale(0);
-                transition: transform .3s;
-            }
-            button.tyJobAddBtn{
-                transition-delay: 0.3s;
-            }
-            button.typeJobCancle{
-                transition-delay: 0.2s;
-            }
-        }
-        .newJob__context.show{
-            input{
-                opacity: 1;
-                transition-delay: 0s;
-            }
-            button.tyJobAddBtn, button.typeJobCancle{
-                transform: scale(1);
-            }
-            button.tyJobAddBtn{
-                transition-delay: 0.4s;
-            }
-            button.typeJobCancle{
-                transition-delay: 0.6s;
-            }
-        }
+    .newJob__context.show {
+      input {
+        opacity: 1;
+        transition-delay: 0s;
+      }
+      button.tyJobAddBtn,
+      button.typeJobCancle {
+        transform: scale(1);
+      }
+      button.tyJobAddBtn {
+        transition-delay: 0.4s;
+      }
+      button.typeJobCancle {
+        transition-delay: 0.6s;
+      }
     }
+  }
+  .slick-arrow {
+    top: 40% !important;
+    color: #73bfdd;
+  }
+  .slick-prev {
+    left: -15px;
+  }
+  .slick-next {
+    right: -15px;
+  }
   .tabMainJob {
     padding: 15px 10px;
     position: relative;
-    .slick-arrow{
-        top: 40%!important;
-    }
-    //    background-color: rgba(220, 208, 208, 0.3);
     text-align: center;
-    &:hover{
-        .tabMainJob__editting{
-            opacity: 1;
-        }
+    &:hover {
+      .tabMainJob__editting {
+        opacity: 1;
+      }
     }
-    .tabMainJob__editting{
-        opacity: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        overflow: hidden;
-        border-radius: 10px;
-        padding: 2px 3px;
-        height: 20px;
-        width: fit-content;
-        margin: auto;
-        margin-top: 5px;
-        box-shadow: 0px 5px 20px 0px rgb(0 0 0 / 20%);
-        cursor: pointer;
-        .editing__item{
-            padding: 8px;
+    .tabMainJob__editting {
+      opacity: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      overflow: hidden;
+      border-radius: 10px;
+      padding: 2px 3px;
+      height: 20px;
+      width: fit-content;
+      margin: auto;
+      margin-top: 5px;
+      box-shadow: 0px 5px 20px 0px rgb(0 0 0 / 20%);
+      cursor: pointer;
+      .editing__item {
+        padding: 8px;
+      }
+      .editBtn {
+        border-right: 1px solid rgba(220, 208, 208, 0.3);
+      }
+      .deleteBtn,
+      .editBtn {
+        &:hover {
+          background-color: rgba(220, 208, 208, 0.3);
         }
-        .editBtn{
-            border-right: 1px solid rgba(220, 208, 208, 0.3);
-        }
-        .deleteBtn,.editBtn{
-            &:hover{
-                background-color: rgba(220, 208, 208, 0.3);
-            }
-        }
+      }
     }
     .tabMainJob__title {
       border-radius: 10px;
@@ -126,64 +136,113 @@
         font-weight: 600;
         display: block;
         min-width: 20px;
-        &:focus-visible{
-            outline: none;
-            color: #FF7070;
-            cursor: text;
+        &:focus-visible {
+          outline: none;
+          color: #ff7070;
+          cursor: text;
         }
       }
-      .tabMainJob__overLay{
-          position: absolute;
-          bottom: 0;
-          left: 0;
-          background-color: rgba(253, 174, 174, 0.523);
-          z-index: 90;
-          width: 0;
-          height: 0;
-          overflow: hidden;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          transition: width,height 0.2s;
-          transition-delay: 0.3s;
-          button{
-              border: none;
-              margin: 0 3px;
-              padding: 2px 4px;
-              border-radius: 5px;
-              background-color: #fff;
-              font-weight: 500;
-                color: #888;
-                margin-bottom: 100px;
-                transition: margin-bottom 0.2s;
-          }
+      .tabMainJob__overLay {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        background-color: rgba(253, 174, 174, 0.523);
+        z-index: 90;
+        width: 0;
+        height: 0;
+        overflow: hidden;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transition: width, height 0.2s;
+        transition-delay: 0.3s;
+        button {
+          border: none;
+          margin: 0 3px;
+          padding: 2px 4px;
+          border-radius: 5px;
+          background-color: #fff;
+          font-weight: 500;
+          color: #888;
+          margin-bottom: 100px;
+          transition: margin-bottom 0.2s;
+        }
       }
       transition: box-shadow 0.3s;
       &:hover {
         box-shadow: 0px 5px 20px 0px rgb(0 0 0 / 20%);
       }
     }
-    .tabMainJob__title.promptNote{
-        .tabMainJob__overLay{
-            width: 100%;
-            height: 100%;
-            transition: width,height 0.2s;
-            button{
-                margin-bottom: 0;
-                transition-delay: 0.5s; 
-            } 
+    .tabMainJob__title.promptNote {
+      .tabMainJob__overLay {
+        width: 100%;
+        height: 100%;
+        transition: width, height 0.2s;
+        button {
+          margin-bottom: 0;
+          transition-delay: 0.5s;
         }
+      }
     }
-    .tabMainJob__title.error{
-        border: 2px solid #FF7070;
+    .tabMainJob__title.error {
+      border: 2px solid #ff7070;
     }
-    .tabMainJob__title.active{
-        box-shadow: 0px 5px 20px 0px rgb(0 0 0 / 20%);
+    .tabMainJob__title.active {
+      box-shadow: 0px 5px 20px 0px rgb(0 0 0 / 20%);
     }
   }
-  .tabMainJob.editAfter{
-        pointer-events:none;
-      opacity: 0.2;
-    }
+  .tabMainJob.editAfter {
+    pointer-events: none;
+    opacity: 0.2;
+  }
 }
 
+@import "helpers/variables.scss";
+@import "helpers/mixin.scss";
+
+// responsive
+@include maxResponsive("large-down") {
+  .mainjob-List__content {
+    .slick-arrow {
+      display: none!important;
+    }
+  }
+}
+@include maxResponsive("small-down") {
+    .mainjob-List__content {
+        .typeJobAdd {
+            padding: 5px 10px;
+          }
+          .tyJobAddBtn,
+          .typeJobCancle {
+            transform-origin: center center;
+          }
+        .manjob-List__addNew {
+            transition: margin-bottom .2s;
+            transition-delay: 0.5s;
+            .newJob__context{
+                width: 210px;
+            }
+            .ant-form-item{
+                margin-bottom: 5px;
+                input{
+                    width: 100%;
+                }
+            }
+            .newJob__context {
+                flex-direction: column;
+                .newJob__action{
+                    margin-left: 0;
+                }
+            }
+            #submidAddNew{
+                position: absolute;
+                z-index: -500;
+            }
+            
+        }
+        .manjob-List__addNew.show{
+            margin-bottom: 55px;
+        }
+    }
+}
