--- a/src/components/Content/HomeLoggedIn/PopularGigs/popularGigs.scss
+++ b/src/components/Content/HomeLoggedIn/PopularGigs/popularGigs.scss
@@ -106,7 +106,7 @@
           width: 100% !important;
           .slick-slide {
             width: 100% !important;
-            img{
+            img {
               height: 100px;
               width: 150px;
             }
@@ -115,20 +115,20 @@
               width: 100% !important;
               display: flex !important;
               flex-direction: row;
-              .card-body{
+              .card-body {
                 padding: 0 0 0 10px;
-                .text-active{
+                .text-active {
                   font-size: 14px;
                 }
               }
-              .card-footer{
+              .card-footer {
                 border-top: none;
-                .icon-footer{
+                .icon-footer {
                   display: none;
                 }
-                p{
+                p {
                   font-size: 9px;
-                  span{
+                  span {
                     font-size: 14px;
                   }
                 }
@@ -137,6 +137,10 @@
           }
         }
       }
+    }
+    .slick-next,
+    .slick-prev {
+      display: none !important;
     }
   }
 }
