--- a/src/containers/home/homePage/DetailListSubType/detailListSubType.scss
+++ b/src/containers/home/homePage/DetailListSubType/detailListSubType.scss
@@ -56,6 +56,7 @@
           p.text-star {
             font-weight: 600;
             color: #ffbe5b;
+            font-size: 16px;
             span {
               color: #b5b6ba;
             }
