--- a/src/containers/admin/JobManagement/EditJob/UploadImage/UploadImage.scss
+++ b/src/containers/admin/JobManagement/EditJob/UploadImage/UploadImage.scss
@@ -32,9 +32,9 @@
         height: 100%;
         width: 200px;
       }
-      img{
-          object-fit: none!important;
-          opacity: 1!important;
+      img {
+        object-fit: none !important;
+        opacity: 1 !important;
       }
     }
     .ant-upload-drag-icon {
@@ -56,27 +56,27 @@
         width: 100%;
         margin: auto;
         height: 100%;
-        &:after{
-            content: "";
-            background-color: rgba(0, 0, 0, 0.5);
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            opacity: 0;
-            z-index: 0;
-            transition: opacity 0.2s;
+        &:after {
+          content: "";
+          background-color: rgba(0, 0, 0, 0.5);
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          opacity: 0;
+          z-index: 0;
+          transition: opacity 0.2s;
         }
-        &:hover{
-            &:after{
-                opacity: 1;
-                z-index: 9;
-            }
-            .icon{
-                opacity: 1;
-                z-index: 10;
-            }
+        &:hover {
+          &:after {
+            opacity: 1;
+            z-index: 9;
+          }
+          .icon {
+            opacity: 1;
+            z-index: 10;
+          }
         }
       }
       img {
@@ -99,6 +99,32 @@
           font-weight: 700;
           cursor: pointer;
         }
+      }
+    }
+  }
+}
+@import "helpers/variables.scss";
+@import "helpers/mixin.scss";
+
+// responsive
+@include maxResponsive("small-down") {
+  .uploadFile {
+    .uploadFile__content {
+      .ant-form-item-control-input-content {
+        div.ant-upload {
+          width: 50%;
+          height: 150px;
+          .anticon-cloud-upload {
+            font-size: 36px;
+          }
+          .ant-upload-text {
+            font-size: 12px;
+          }
+        }
+      }
+      .renderImage {
+        left: 50%;
+        width: 50%;
       }
     }
   }
