--- a/src/containers/admin/dashboard/TopBuyer/TopUser.scss
+++ b/src/containers/admin/dashboard/TopBuyer/TopUser.scss
@@ -1,7 +1,7 @@
 .topUser {
   table {
     td {
-      &:nth-of-type(2) {
+      &:nth-of-type(1) {
           text-align: center;
         .topUser__avatar {
             position: absolute;
@@ -10,11 +10,10 @@
             transform: translate(-50%, -50%);
             height: 40px;
             width: 40px;
-            border: 2px solid #888;
+            border: 1px solid #888;
             border-radius: 50%;
-            padding: 1px;
             overflow: hidden;
-            box-shadow: 0 5px 10px 0 #ccc;
+            box-shadow: 0 8px 14px 0 #ccc;
             img{
                 width: 100%;
                 height: 100%;
@@ -23,10 +22,11 @@
                 object-position: center;
             }
             p{
-                font-weight: 700;
-                font-size: 23px;
+                font-weight: 600;
+                font-size: 15px;
                 color: #73BFDD;
                 margin-bottom: 0;
+                line-height: 38px;
             }
         }
       }
