--- a/src/components/Header/HeaderLoggedIn/headerLoggedIn.scss
+++ b/src/components/Header/HeaderLoggedIn/headerLoggedIn.scss
@@ -392,9 +392,7 @@
   }
 }
 @media only screen and (max-width: 667px) {
-  #header-fixed-loggedin {
-    margin-left: 10px;
-  }
+  
   #category__content-loggedin {
     ul {
       width: 184%;
@@ -404,18 +402,23 @@
 @include maxResponsive(extra-small) {
   #header-fixed-loggedin {
     .header-fixed-reponsive {
+      height: 100px;
       position: relative;
+      border-bottom: 1px solid #ddd;
       .menu-hidden-left {
         transform: translateX(-40px);
       }
       .search-input-antd {
         width: 85%;
         position: absolute;
-        bottom: -33px;
-        transform: translateX(1%);
+        bottom: 9px;
+        transform: translateX(-1%);
       }
       .hidden-responsive {
         display: none;
+      }
+      .header-fixed-logo {
+        transform: translateX(-70px);
       }
     }
   }
