--- a/src/containers/home/homePage/DetailListSubType/detailListSubType.scss
+++ b/src/containers/home/homePage/DetailListSubType/detailListSubType.scss
@@ -1,16 +1,14 @@
 .detail-list-subtype {
   max-width: 1400px;
-  padding-top: 30px;
+  padding: 32px;
   padding-bottom: 80px;
-  width: 96%;
-  margin: 0 auto;
   position: relative;
   .info-type-subtype {
     h4 {
       color: #222325;
       font-size: 32px;
       font-weight: bolder;
-      margin-bottom: 0;
+      margin-bottom: 15px;
     }
     p {
       color: #95979d;
@@ -21,13 +19,22 @@
     .result-sort {
       display: flex;
       justify-content: space-between;
+      align-items: center;
       p {
         color: #7a7d85;
         font-weight: 600;
         font-size: 15px;
       }
+      .switch-sortBtn{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
       .search-by-switch {
         display: flex;
+        &>p{
+          display: none;
+        }
         div {
           label {
             font-weight: 600;
@@ -36,6 +43,24 @@
             color: #7a7d85;
           }
         }
+      }
+      .ant-switch-checked {
+        background-color: #1dbf73;
+      }
+      .ant-switch-small {
+        min-width: 35px;
+        height: 20px;
+        line-height: 20px;
+      }
+      .ant-switch-small .ant-switch-handle {
+        width: 15px;
+        height: 16px;
+      }
+      .ant-switch-handle {
+        left: 3px;
+      }
+      .ant-switch-small.ant-switch-checked .ant-switch-handle {
+        left: calc(100% - 16px - 2px);
       }
     }
     .main-content {
@@ -97,27 +122,128 @@
       }
     }
   }
-}
-
-
-@media only screen and (max-width: 414px) {
-  .detail-list-subtype {
-    .render-list-subtype {
-      .result-sort {
-        flex-direction: column;
-        .search-by-switch {
-          flex-direction: column;
-          .switch-icon {
-            display: flex;
-            justify-content: space-between;
-          }
+  .main-content {
+    margin: 20px 0 0 0;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 33px;
+  }
+  .jobR {
+    max-width: 100%;
+    max-height: 310px;
+    padding-right: 0;
+    padding-left: 0;
+    .jobRender-item {
+      img {
+        width: 100%;
+      }
+    }
+    .jobRender-content {
+      padding: 8px 15px 10px;
+      font-size: 15px;
+      a {
+        overflow: hidden;
+        word-wrap: break-word;
+        word-break: break-word;
+        color: #222325;
+        display: -webkit-box;
+        height: 52px;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        h4 {
+          font-size: 15px;
         }
       }
-      .main-content {
-        .job-item {
-          height: 300px;
-          .card-footer {
-            gap: 55px;
+    }
+    .jobRender-detail {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 5px;
+      .detail-rating {
+        color: #ffdc60;
+        .anticon {
+          vertical-align: 1.25px;
+          margin-left: 2px;
+        }
+      }
+      h4 {
+        margin-bottom: 0;
+        font-size: 15px;
+      }
+      .detail-price {
+        color: #1dbf73;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .detail-list-subtype {
+    .main-content {
+      grid-template-columns: repeat(3, 1fr);
+    }
+  }
+}
+
+@media only screen and (max-width: 575.99px) {
+  .detail-list-subtype {
+    padding: 32px 16px 80px;
+    .info-type-subtype {
+      h4 {
+        font-size: 24px;
+      }
+    }
+    .main-content {
+      grid-template-columns: repeat(2, 1fr);
+    }
+    .render-list-subtype {
+      .result-sort {
+        margin-bottom: 10px;
+        p{
+          margin-bottom: 0;
+        }
+        justify-content: space-between;
+        .search-by-switch {
+          flex-direction: column;
+          justify-content: flex-end;
+          position: relative;
+          & > p{
+            padding: 5px 10px;
+            margin-bottom: 0;
+            color: #fff;
+            display: block;
+            width: 100px;
+            border-radius: 10px;
+            text-align: center;
+            background-color: #1dbf73;
+          }
+          .switch-sortBtn{
+            flex-direction: column;
+            justify-content: flex-start;
+            height: 0;
+            padding: 0 10px;
+            width: 170px;
+            background-color: #fff;
+            color: #1dbf73;
+            overflow: hidden;
+            position: absolute;
+            top: 100%;
+            right: 0;
+            z-index: 150;
+            transition: height, padding 0.2s;
+          }
+          .switch-sortBtn.show{
+            height: 100px;
+            padding: 10px;
+          }
+          .switch-icon {
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            label{
+              margin: 0;
+              margin-bottom: 10px;
+            }
           }
         }
       }
