update and fix all issue

--- a/src/App.css
+++ b/src/App.css
@@ -23,3 +23,11 @@ ul{
 li {
   list-style: none !important;
 }
+::-webkit-scrollbar {
+	width: 3px;
+}
+::-webkit-scrollbar-thumb {
+	background-color: #4c4c6a;
+	border-radius: 2px;
+}
+
