--- a/src/containers/home/homePage/DetailListSubType/detailListSubType.scss
+++ b/src/containers/home/homePage/DetailListSubType/detailListSubType.scss
@@ -1,6 +1,7 @@
 .detail-list-subtype, .page-search-job {
   max-width: 1400px;
   padding: 32px;
+  margin: auto;
   padding-bottom: 80px;
   position: relative;
   .info-type-subtype {
